[package]
name = "cargo-uf2"
version = "0.1.0"
authors = ["Jacob <jacobrosenthal@gmail.com>"]
edition = "2018"


[patch.crates-io]
uf2 = { git = 'https://github.com/jacobrosenthal/uf2-rs', rev="7a7412aac538852f5aa44f652fee7acda47879a1"}

[dependencies]
structopt = "0.3.2"
colored = "1.8.0"
uf2 = "0.1.0"
hidapi = "0.5.2"
goblin = "0.0.24"
hexdump = "0.1.0"
cargo-project = "0.2.2"
pretty_env_logger = "0.3.0"
maplit = "1.0.2"
crc-any = {version = "2.2.3", default-features = false }
log = "0.4.6"
